feat: add more tests